--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 <table>
+    <thead>
     <tr>
     <th>Part</th>
     <th>XS</th>
@@ -16,6 +17,7 @@
     <th>L</th>
     <th>XL</th>
 </tr>
+</thead>
 <tr>
     <td>Waist</td>
     <td>25</td>
